fixed bugg of global pyro.params for multiple models by introducing a pyro.module

--- a/bundesliga/conf/base/catalog.yml
+++ b/bundesliga/conf/base/catalog.yml
@@ -148,8 +148,8 @@
 
 # The following datasets are commented out and can be enabled if needed.
 
-# "{engine}.{dataset_name}.{variant}.modeldefinitions":
-#     type: MemoryDataset  # Dataset type for in-memory data.
+"{engine}.{dataset_name}.{variant}.modeldefinitions":
+    type: MemoryDataset  # Dataset type for in-memory data.
 
-# "{engine}.{dataset_name}.{variant}.aggregated_metrics":
-#     type: MemoryDataset  # Dataset type for in-memory data.
+"{engine}.{dataset_name}.{variant}.aggregated_metrics":
+    type: MemoryDataset  # Dataset type for in-memory data.
