--- a/bundesliga/conf/base/datasets_list.yml
+++ b/bundesliga/conf/base/datasets_list.yml
@@ -1,6 +1,7 @@
 datasets:
-  - D1-24-25
-  - D2-24-25
+  # - D1-24-25
+  # - D2-24-25
   # - D1-23-24
   # - D2-23-24
   # - D1-19-20
+    - D1-24-25-test
