--- a/bundesliga/.gitignore
+++ b/bundesliga/.gitignore
@@ -125,7 +125,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+# docs/_build/
 
 # PyBuilder
 target/
@@ -159,3 +159,5 @@ venv.bak/
 
 # mlflow local runs
 mlruns/*
+
+notebooks/*
