--- a/bundesliga/requirements.txt
+++ b/bundesliga/requirements.txt
@@ -1,5 +1,6 @@
 ipython>=8.10
 jupyterlab>=3.0
+kedro==0.19.10
 kedro-datasets>=3.0
 kedro-viz>=6.7.0
 kedro[jupyter]~=0.19.10
@@ -17,3 +18,4 @@ statsd # for logging
 pymc-experimental
 pytest
 pytest-cov
+kedro-docker
