--- a/bundesliga/.gitignore
+++ b/bundesliga/.gitignore
@@ -9,7 +9,12 @@ conf/local/**
 conf/**/*credentials*
 
 # ignore everything in the data folder
-data/**
+data/02_intermediate/**
+data/03_primary/**
+data/04_feature/**
+data/05_model_input/**
+data/06_models/**
+data/07_model_output/**
 
 # except their sub-folders
 !data/01_raw/
